<resources>
    <string name="app_name">The Attic</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_registered_login">Already registered? Login</string>
    <string name="enter_profile_name">Enter Profile Name</string>
    <string name="user_profile">User Profile</string>
    <string name="login">Login</string>
    <string name="no_account_sign_up">No Account? Sign Up</string>
    <string name="post">Post</string>
    <string name="post_title">Post title</string>
    <string name="post_description">Post description</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="victor">Victor</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="_0">0</string>
    <string name="likes">Likes</string>
    <string name="comment_button">Comment Button</string>
    <string name="set_profile">Set Profile</string>
    <string name="add_post">Add Post</string>
    <string name="delete_post">Delete Post</string>
</resources>