<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:background="@drawable/circular_bordershape">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    app:cardCornerRadius="15dp">

                    <ImageView
                        android:id="@+id/userImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/user_profile_picture"
                        android:scaleType="centerCrop"
                        android:src="@drawable/wood"/>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <TextView
                android:id="@+id/post_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:gravity="end"
                android:text="@string/victor"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_toEndOf="@id/relativeLayout1"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/post_user"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/relativeLayout1"
                android:text="@string/time"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/post_user"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/time"
                android:text="@string/date"
                android:textColor="@color/white"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linear_layout_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/black">

            <ImageView
                android:id="@+id/post_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/post_title_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/post_title"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/post_desc_txtview"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:text="@string/post_description"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:src="@drawable/dislike"/>

            <TextView
                android:id="@+id/likes_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="#FF0000"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/likes_txtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/likes"
                android:textColor="#FF0000"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <ImageButton
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:background="@color/black"
                android:src="@drawable/comment"
                android:contentDescription="@string/comment_button" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>